--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   
-  <title>CodePen Demo</title>
+  <title>Register</title>
 
   <meta name="robots" content="noindex">
 
